--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "node src/index.js",
@@ -20,7 +21,8 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.2"
   },
   "description": ""
 }
