--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -17,12 +18,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eslint": "^9.12.0",
     "express": "^4.18.1",
+    "globals": "^15.11.0",
     "helmet": "^8.0.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "pino-http": "^10.3.0",
     "pino-pretty": "^11.2.2"
-  },
-  "description": ""
+  }
 }
