--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "globals": "^15.11.0",
     "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "pino-http": "^10.3.0",
